# UML-RT_StateMachines_Transformations

./: README.md
2WayTransformations/: .project  G.model  G2T.etl  G2T.launch  T.hclscope  T2G.etl  T2G.launch
Papyrus/__MACOSX/: ._org.eclipse.papyrus-rt  ._org.eclipse.papyrus-rt-4236d5714d439a379d2a76a0e383a61e4c1a6646
Papyrus/org.eclipse.papyrus-rt/: .gitattributes  .gitignore  .project  CONTRIBUTING.md  README.md  pom.xml  rcptt.properties
Papyrus/org.eclipse.papyrus-rt-4236d5714d439a379d2a76a0e383a61e4c1a6646/: .gitignore  pom.xml
Papyrus/org.eclipse.papyrus-rt-4236d5714d439a379d2a76a0e383a61e4c1a6646/features/: readme.txt
Papyrus/org.eclipse.papyrus-rt-4236d5714d439a379d2a76a0e383a61e4c1a6646/releng/: .project  PapyrusRT.launch  pom.xml
Papyrus/org.eclipse.papyrus-rt/documentation/: readme.txt
Papyrus/org.eclipse.papyrus-rt/models/tests/codepattern/structure/IncarnateCapsuleWithSubstructure2/expected_src/: A.cc  A.hh  B.cc  B.hh  C.cc  C.hh  CMakeLists.txt  D.cc  D.hh  E.cc  E.hh  F.cc  F.hh  G.cc  G.hh  H.cc  H.hh  I.cc  I.hh  J.cc  J.hh  MakefileTop.mk  Protocol2.cc  Protocol2.hh  Protocol3.cc  Protocol3.hh  Top.cc  Top.hh  TopControllers.cc  TopControllers.hh  TopMain.cc
org.xtext.example.hclscope/: .project  plugin.xml
org.xtext.example.hclscope.ide/: .project
org.xtext.example.hclscope.tests/: .project
org.xtext.example.hclscope.ui/: .project  plugin.xml
org.xtext.example.hclscope.ui.tests/: .project
org.xtext.example.hclscope/.launch/: Generate HclScope (hclscope) Language Infrastructure.launch  Launch Runtime Eclipse.launch
(+3988 files in other folders)
